[FEATURE] Authentication with backend [X], Add patient Model [X], Add HealthInfo model [X]

--- a/Health.booking/.graphqlconfig.yml
+++ b/Health.booking/.graphqlconfig.yml
@@ -14,3 +14,6 @@ projects:
         apiId: hr6m2jb2wzhhhcglzolvpwlqra
         frontend: ios
         maxDepth: 2
+extensions:
+  amplify:
+    version: 3
