[FEATURE] Health Data completed

--- a/Health.booking/Info.plist
+++ b/Health.booking/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Your health data will be used to give doctor insights when you book appointments</string>
 </dict>
 </plist>
